Fix wrapping of tags

--- a/src/components/CharactersTable/CharactersTable.css
+++ b/src/components/CharactersTable/CharactersTable.css
@@ -57,7 +57,8 @@
 }
 
 .tags-container {
-  text-align: left;
+  display: flex;
+  flex-wrap: wrap;
 }
 
 .selected-row-color {
