--- a/src/components/TagsFilter/TagsFilter.css
+++ b/src/components/TagsFilter/TagsFilter.css
@@ -1,3 +1,6 @@
 .tags-filter-container {
   text-align: center;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
 }
